2024-10-31T01:44:08Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11604613514 # 465
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-31
* notice: last 14d: unq all: 6 1737
* notice: prev accum: outdated-unq outdated-all / unq all: 2274 229890 / 2293 231676
* notice: next accum: outdated-unq outdated-all / unq all: 2275 230018 / 2295 231830
* notice: prev exec diff / last date diff / accum: unq all: +2 +154 -0 -75 / +1 +27 -0 -0 / 1 27
* notice: removed / changed dates: [2024-10-16] / [2024-10-17 2024-10-30 2024-10-31]

2024-10-30T01:43:07Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11585444796 # 464
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-30
* notice: last 14d: unq all: 6 1711
* notice: prev accum: outdated-unq outdated-all / unq all: 2272 229761 / 2293 231576
* notice: next accum: outdated-unq outdated-all / unq all: 2274 229890 / 2293 231676
* notice: prev exec diff / last date diff / accum: unq all: +0 +100 -0 -75 / +1 +127 -0 -0 / 1 127
* notice: removed / changed dates: [2024-10-15] / [2024-10-16 2024-10-29]

2024-10-29T01:44:21Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11565744844 # 463
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-29
* notice: last 14d: unq all: 7 1740
* notice: prev accum: outdated-unq outdated-all / unq all: 2270 229633 / 2291 231423
* notice: next accum: outdated-unq outdated-all / unq all: 2272 229761 / 2293 231576
* notice: prev exec diff / last date diff / accum: unq all: +2 +153 -0 -75 / +1 +27 -0 -0 / 1 27
* notice: removed / changed dates: [2024-10-14] / [2024-10-15 2024-10-28 2024-10-29]

2024-10-28T01:46:30Z: