@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2024-10-19T01:40:34Z",
-  "count" : 128,
+  "timestamp" : "2024-11-01T01:49:52Z",
+  "count" : 53,
   "count_minmax" : [ 29, 128 ],
-  "count_decinc" : [ -0, +128 ],
+  "count_decinc" : [ -75, +128 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
