@@ -1,8 +1,8 @@
 {
   "timestamp" : "2024-11-01T01:49:52Z",
-  "count" : 128,
-  "count_minmax" : [ 27, 128 ],
-  "count_decinc" : [ -0, +128 ],
+  "count" : 22,
+  "count_minmax" : [ 22, 22 ],
+  "count_decinc" : [ -0, +22 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
