@@ -1,15 +1,10 @@
 {
-  "count": 1737,
+  "count": 1732,
   "uniques": 6,
   "clones": [
     {
-      "timestamp": "2024-10-17T00:00:00Z",
-      "count": 53,
-      "uniques": 1
-    },
-    {
       "timestamp": "2024-10-18T00:00:00Z",
-      "count": 128,
+      "count": 53,
       "uniques": 1
     },
     {
@@ -74,7 +69,12 @@
     },
     {
       "timestamp": "2024-10-31T00:00:00Z",
-      "count": 27,
+      "count": 128,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-11-01T00:00:00Z",
+      "count": 22,
       "uniques": 1
     }
   ]
