@@ -1,3 +1,12 @@
+2024-11-01T01:49:52Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11622833744 # 466
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-11-01
+* notice: last 14d: unq all: 6 1732
+* notice: prev accum: outdated-unq outdated-all / unq all: 2275 230018 / 2295 231830
+* notice: next accum: outdated-unq outdated-all / unq all: 2276 230146 / 2296 231953
+* notice: prev exec diff / last date diff / accum: unq all: +1 +123 -0 -75 / +1 +22 -0 -0 / 1 22
+* notice: removed / changed dates: [2024-10-17] / [2024-10-18 2024-10-31 2024-11-01]
+
 2024-10-31T01:44:08Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11604613514 # 465
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-31
